test_cases/negative/export_in_function.snek
def Double(value) {
    export result = Add(value, value);
}

export DEFAULT = Double(10);
